增加首页直接关注按钮

--- a/source/stylesheets/bootstrap.css
+++ b/source/stylesheets/bootstrap.css
@@ -4613,7 +4613,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
 
 .pagination>.disabled>a,.pagination>.disabled>a:focus,.pagination>.disabled>a:hover,.pagination>.disabled>span,.pagination>.disabled>span:focus,.pagination>.disabled>span:hover {
 	color: #777;
-	cursor: not-allowed;
+	/*cursor: not-allowed;*/
 	background-color: #fff;
 	border-color: #ddd
 }
