--- a/source/stylesheets/loginreg.css
+++ b/source/stylesheets/loginreg.css
@@ -60,7 +60,8 @@
 	background-color: #3D72AC; 
 }
 .accountbg {
-	background: url(../images/y_accountbg.png) 10px 10px no-repeat
+	background: url(../images/y_accountbg.png) 10px 10px no-repeat;
+	background-size: 16px 17px;
 }
 
 .emailbg {
