增加底部标签栏

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <body>
 <% include partial/nav %>
 <div class="mainwrap">
+
 	<% if(!locals.userinfo){%>
 	<div class="rightwrap">
 		<%}else{%>
@@ -109,8 +110,17 @@
 </script>
 
 				</div> 
-			<div style="clear:both"></div>
+			<div style="clear:both">
+			</div>
+		</div>
+		<div id="tags-bar">
+				<ul class="tag-list">			
+				<% 
+					var tags = d.tags;
+					for(var i= 0;i<tags.length;i++){%>
+					<li class="tag-single"> <a href="/tag/<%- tags[i]%>/"><%- tags[i]%></a> </li>
 
-
+				<%}%> 
+				</ul>			
 		</div>
 		<% include partial/footer %>
