--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head> 
-	<title><%= config.site.name + '-' + title %> </title> 
+	<title><%=title + ' - ' + config.site.name%> </title> 
 	<meta charset="UTF-8">
 	<meta name="ujianVerification" content="ee8a13aa7bd02c94ede87ac5faba8147" />
 	<meta name="description" content="<%= title %>">
