--- a/source/stylesheets/build.css
+++ b/source/stylesheets/build.css
@@ -6812,7 +6812,7 @@ button.close {
 	width: 615px;
 	height: 30px;
 	resize: vertical;
-	border-radius: 4px;
+	border-radius: 0px;
 	padding: 4px 40px 4px 4px;
 	-webkit-transition: all linear 0.2s;
 	-moz-transition: all linear 0.2s;
@@ -6859,6 +6859,16 @@ button.close {
 } 
 .writebox{	
 	float: right;
+}
+
+#last-reply-time{
+	color: #838383;
+    font-size: 12px;
+    font-weight: 200; 
+}
+
+#last-reply-time::before{
+	content: "|";
 }
 .meiriyiju {
 	margin: 0 auto;
