--- a/views/user.ejs
+++ b/views/user.ejs
@@ -81,12 +81,12 @@
 						<div class="navigator">
 					<% if(nearArticle.length > 12){%> 
 							<% if(d.currentpage > 1 ){%>
-							<a href="/user/<%= visituser %>/<%= cata %>/?pageid=<%= d.currentpage - 1  %>" class="last_page fade_trans">
+							<a href="/user/<%= visituser %>/<%= cata %>/?p=<%= d.currentpage - 1  %>" class="last_page fade_trans">
 								&larr;上一页
 							</a>
 							<%}%>
 							<% if(nearArticle.length > config.index.list_article_size ){%>
-							<a href="/user/<%= visituser %>/<%= cata %>/?pageid=<%= d.currentpage - (-1)  %>" class="next_page fade_trans">
+							<a href="/user/<%= visituser %>/<%= cata %>/?p=<%= d.currentpage - (-1)  %>" class="next_page fade_trans">
 								下一页&rarr;
 							</a>
 							<%}%>
