--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -14,6 +14,9 @@ a:hover{
 	cursor:pointer;
 	text-decoration: none;
 }
+.text-align{
+	text-align: center;
+}
 input:focus,textarea:focus{
 	outline:0;
 	border-color:rgba(82,168,236,0.8); 
@@ -40,7 +43,7 @@ ul{
 	width: 970px;
 	min-height: 400px;
 	margin: 10px auto 0;
-	margin-top: 70px; 
+	margin-top: 60px; 
 }
 
  
@@ -87,6 +90,19 @@ ul{
 }
 .otherlink:hover{
 	color: #707b91;
+}
+.about-site{
+	width: 725px;
+    margin-left: 114px;
+    margin-left: 154px;
+    text-align: left;
+}
+.git-notice{	
+    width: 725px;
+    margin-left: 154px;
+    text-align: left;
+    color: #ccc;
+    font-size: 14px;
 }
 .aboutpanel {
 	margin-top: 20px;
