--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -73,15 +73,18 @@
 	<div id="gotopbtn" data-toggle="tooltip" data-placement="right" title="TOP">
 		<span class="fa fa-arrow-up"></span>
 	</div>
-	
-	<div>
-		<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
+	 
+	<div class="about-site">
 		<span>版权所有 © 2014 38SR.COM</span>
 		<a target="_blank" href="https://github.com/ForestCho/nodejs-38sr" class="otherlink">源码</a>
 		<a href="/about" class="otherlink">关于</a>
 		<a href="/shijian" class="otherlink">成长线</a>
 		<a href="/feedback" class="otherlink">反馈</a>
 		<a target="_blank" href="http://weibo.com/forestcho?from=profile&wvr=5&loc=infdomain" class="otherlink">微博</a>
+		<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
+	</div>
+	<div class="git-notice">
+		本社区系统在Github上已开源，欢迎Start和Fork
 	</div>
 </footer>
 </body>
