--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -75,8 +75,7 @@
 	</div>
 	 
 	<div class="about-site">
-		<span>版权所有 © 2014 38SR.COM</span>
-		<a target="_blank" href="https://github.com/ForestCho/nodejs-38sr" class="otherlink">源码</a>
+		<span>版权所有 © 2014 38SR.COM</span> 
 		<a href="/about" class="otherlink">关于</a>
 		<a href="/shijian" class="otherlink">成长线</a>
 		<a href="/feedback" class="otherlink">反馈</a>
@@ -84,7 +83,7 @@
 		<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
 	</div>
 	<div class="git-notice">
-		本社区系统在Github上已开源，欢迎Start和Fork
+		本社区系统在Github上已开源，欢迎<a  target="_blank" href="https://github.com/ForestCho/nodejs-38sr">Star</a>和<a  target="_blank"  href="https://github.com/ForestCho/nodejs-38sr">Fork</a>
 	</div>
 </footer>
 </body>
