--- a/source/stylesheets/bootstrap.css
+++ b/source/stylesheets/bootstrap.css
@@ -3022,8 +3022,8 @@ select[multiple].input-lg,textarea.input-lg {
 .btn.active,.btn:active {
 	background-image: none;
 	outline: 0;
-	-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
-	box-shadow: inset 0 3px 5px rgba(0,0,0,.125)
+/* 	-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+box-shadow: inset 0 3px 5px rgba(0,0,0,.125) */
 }
 
 .btn.disabled,.btn[disabled],fieldset[disabled] .btn {
