--- a/views/indexarticle.ejs
+++ b/views/indexarticle.ejs
@@ -65,6 +65,17 @@
 					<%}}%>
 				</div>
 				<% include partial/pagination%>
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 725 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:725px;height:90px"
+     data-ad-client="ca-pub-4947257507951598"
+     data-ad-slot="7255595465"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 			</div>
 			<div style="clear:both"></div>
 		</div>
