--- a/views/partial/indexsidebar.ejs
+++ b/views/partial/indexsidebar.ejs
@@ -61,3 +61,16 @@ if(siteList.length > 0){
 	</ul>
 </div> 
 <%}%> 
+
+
+<div class="google-ad">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- 214 -->
+	<ins class="adsbygoogle"
+	     style="display:inline-block;width:214px;height:214px"
+	     data-ad-client="ca-pub-6736333362394709"
+	     data-ad-slot="2368243071"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</div>
