--- a/views/shijian.ejs
+++ b/views/shijian.ejs
@@ -9,124 +9,84 @@
 		<div class="shijianpanel">   
 					<div id="timewrap">
 					<ul class="through">
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2014-7-1</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>注册38sr域名</h3>
-									<h5>注册38sr域名</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2014-7-1
+							</div> 
+							<div class="detail">
+								<div class="detail-head">注册38sr域名</div>
+								<h5>注册38sr域名</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2014-8-3</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>程序开发完毕</h3>
-									<h5>程序开发完毕,并最终部署在digitalocean的vps上</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2014-8-3
+							</div> 
+							<div class="detail">
+								<div class="detail-head">程序开发完毕</div>
+								<h5>程序开发完毕,并最终部署在digitalocean的vps上</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2014-9-23</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>新增加栏目</h3>
-									<h5>增加笑料，娱乐，囧事等栏目</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2014-9-23
+							</div> 
+							<div class="detail">
+								<div class="detail-head">新增加栏目</div>
+								<h5>增加笑料，娱乐，囧事等栏目</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2014-11-10</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>网站能支持手机屏幕</h3>
-									<h5>网站能支持手机屏幕</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2014-11-10
+							</div> 
+							<div class="detail">
+								<div class="detail-head">网站能支持手机屏幕</div>
+								<h5>网站能支持手机屏幕</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2014-11-14</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>网站使用ssl安全证书</h3>
-									<h5>网站使用ssl,成为使用ssl用户数最少的网站</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2014-11-14
+							</div> 
+							<div class="detail">
+								<div class="detail-head">网站使用ssl安全证书</div>
+								<h5>网站使用ssl,成为使用ssl用户数最少的网站</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2015-01-10</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>增加android客户端</h3>
-									<h5>增加android客户端,到20150330客户端已经有发表评论点赞功能...</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2015-01-10
+							</div> 
+							<div class="detail">
+								<div class="detail-head">增加android客户端</div>
+								<h5>增加android客户端,到20150330客户端已经有发表评论点赞功能...</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>2015-06-01</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>增加快链功能</h3>
-									<h5>增加快链功能,可以发布哪些你喜欢的文章或网站网址...</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								2015-06-01
+							</div> 
+							<div class="detail">
+								<div class="detail-head">增加快链功能</div>
+								<h5>增加快链功能,可以发布哪些你喜欢的文章或网站网址...</h5>
+							</div> 
 						</li>
 
-						<li>
-							<div class="linewrap">
-								<div class="date">
-									<span>...</span>
-								</div>
-								<div class="point">
-									<b></b>
-								</div>
-								<div class="detail">
-									<h3>未来 Future</h3>
-									<h5>未来可期待...</h5>
-								</div>
-							</div>
+						<li> 
+							<div class="date">
+								...
+							</div> 
+							<div class="detail">
+								<div class="detail-head">未来 Future</div>
+								<h5>未来可期待...</h5>
+							</div> 
 						</li>
 					</ul>
 				<br> 
