--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -159,12 +159,12 @@ var replies = d.replies;
 					<div class="nosignin"><a id="nosiginin-login">登录</a>后才能回复， 没有账号？点击这里<a id="nosiginin-reg">注册</a></div>
 					<%}%>
 
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 725 -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 文章页 -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:725px;height:90px"
-     data-ad-client="ca-pub-4947257507951598"
-     data-ad-slot="7255595465"></ins>
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6736333362394709"
+     data-ad-slot="4472588271"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
