--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head> 
-	<title><%=title + ' - ' + config.site.name%> </title> 
+	<title><%=title + ' - ' + config.site.name%> </title> 	
+	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
 	<meta charset="UTF-8">
 	<meta name="ujianVerification" content="ee8a13aa7bd02c94ede87ac5faba8147" />
 	<meta name="description" content="<%= title %>">
 	<meta name="keywords" content="<%= config.site.keywords %>">
 	<meta name="author" content="<%= config.site.author %>">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/images/favicon.ico">   
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel='stylesheet' href='/stylesheets/build.min.css' /> 
