--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,5 +1,15 @@
 <footer class="copyright">
-	
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-74642468-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
 	<!-- Modal -->
 	<div class="modal fade" id="regmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal_regwrap">
@@ -70,9 +80,6 @@
 			</div>
 		</div>
 	</div>
-	<div id="gotopbtn" data-toggle="tooltip" data-placement="right" title="TOP">
-		<span class="fa fa-arrow-up"></span>
-	</div>
 	 
 	<div class="about-site">
 		<span>版权所有 © 2014 38SR.COM</span> 
@@ -84,6 +91,9 @@
 	</div>
 	<div class="git-notice">
 		本社区系统在Github上已开源，欢迎<a  target="_blank" href="https://github.com/ForestCho/nodejs-38sr">Star</a>和<a  target="_blank"  href="https://github.com/ForestCho/nodejs-38sr">Fork</a>
+		<div id="gotopbtn">
+			<span class="fa fa-arrow-up"></span> 返回顶部
+		</div>
 	</div>
 </footer>
 </body>
